bobcat (4.03.00) WIP

  * Prepared all classes depending on the OpenSSL libraries for OpenSSL1.1.0
    Note that the new library requires linking to the crypto library as well
    (refer to the man-pages for details)

-----------------------------------------------
    
bobcat (4.02.00)

  * Added the member template 
        template <typename Fun, typename ...Args>
        void wait(Fun fun, Args &&...args);        // wait # available
    to the class Semaphore. See 'man -e bobcat semaphore' for details.

  * Updated documentation for yodl 3.07.01

  * Updated 'required': yodl >= 3.07.01, icmake >= 8.01.00

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Tue, 26 Apr 2016 10:38:48 +0530

bobcat (4.01.04)

  * build script updated to icmake >= 8.00.04

  * 'build install' supports an optional LOG: argument: the (relative or
    absolute) path to an installation log file. The environment variable
    BOBCAT is no longer used.

  * Modified the procedure to install files at their final destinations.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 12 Dec 2015 13:21:43 +0100

bobcat (4.01.03)

  * Kevin Brodsky observed that the installation scripts used 'chdir' rather
    than 'cd'. Fixed in this release.

  * Kevin Brodsky also observed that the combined size of all precompiled 
    headers might exceed some disks capacities. The option -P was added to the
    ./build script to prevent the use of precompiled headers.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Mon, 05 Oct 2015 20:42:08 +0200

bobcat (4.01.02)

  * Classes pf_iterator and pf_iteratorstream are BigInt dependent, and are
    now ignored when running 'build light'.

  * The arguments and working of './build install' and './build uninstall' was
    changed. Call ./build for a short description, or read INSTALL.

 -- Frank B. Brokken <f.b.brokken@rug.nl>  Wed, 30 Sep 2015 22.05:58 +0200

bobcat (4.01.01)

  * Reverted back to using .ih header files again. No additional changes.
