@@ -1,19 +1,20 @@
 #include "diffiehellman.ih"
 
-void DiffieHellman::checkDHparameters()
+    // check the DH parameters. If all's well return, otherwise
+    // write messages or throw an exception
+    // 
+void DiffieHellman::checkDHparameters(size_t generator)
 {
     int result;
 
-    if (DH_check(d_dh.get(), &result) == 0) 
+    if (DH_check(d_dh, &result) == 0)     // 0: check fails, 1: check OK
         result = CHECK_FAILS;
 
     if (result == 0)
         return;
 
     if (result & (DH_CHECK_P_NOT_PRIME | DH_CHECK_P_NOT_SAFE_PRIME))
-        throw Exception() << s_header << "invalid prime generated"; 
-
-    BigInt generator(const_cast<BIGNUM const *>(d_dh->g));
+        throw Exception{} << s_header << "invalid prime generated"; 
 
     if (result & DH_NOT_SUITABLE_GENERATOR)
         wmsg << s_header << generator << " is not a generator for the "
@@ -24,13 +25,5 @@ void DiffieHellman::checkDHparameters()
             generator << endl;
 
     else if (result & CHECK_FAILS)
-        throw Exception() << s_header << "parameter check fails"; 
+        throw Exception{} << s_header << "parameter check fails"; 
 }
-
-
-
-
-
-
-
-
