@@ -4,6 +4,8 @@ bobcat (4.03.00) WIP
     Note that the new library requires linking to the crypto library as well
     (refer to the man-pages for details)
 
+  * Programs using DiffieHellman should be recompiled.
+
 -----------------------------------------------
     
 bobcat (4.02.00)
